WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98429
[Qt] Fix mouse hover events when devicePixelRatio != 1
https://bugs.webkit.org/show_bug.cgi?id=98429
Summary
[Qt] Fix mouse hover events when devicePixelRatio != 1
Jocelyn Turcotte
Reported
2012-10-04 11:06:22 PDT
[Qt] Fix mouse hover events when devicePixelRatio != 1
Attachments
Patch
(2.48 KB, patch)
2012-10-04 11:08 PDT
,
Jocelyn Turcotte
kenneth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2012-10-04 11:08:00 PDT
Created
attachment 167136
[details]
Patch
Jocelyn Turcotte
Comment 2
2012-10-08 03:48:41 PDT
Committed
r130631
: <
http://trac.webkit.org/changeset/130631
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug