[Qt] Fix the mouse hover events transformation when devicePixelRatio != 1 https://bugs.webkit.org/show_bug.cgi?id=98429

Reviewed by Kenneth Rohde Christiansen.

This prevents the events from being transformed two or three times.
This is only noticeable in desktop mode.

* UIProcess/qt/QtWebPageEventHandler.cpp:
(WebKit::QtWebPageEventHandler::handleHoverLeaveEvent):
(WebKit::QtWebPageEventHandler::handleHoverMoveEvent):

Canonical link: https://commits.webkit.org/116618@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130631 268f45cc-cd09-0410-ab3c-d52691b4dbfc